# where_is_my_parcel

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  pyrightconfig.json
tests/: __init__.py  test_where_is_my_parcel.py
where_is_my_parcel/: GettingStarted.ipynb  __init__.py  app.py  app_tracking.py  backend_app.py  frontend_app.py
where_is_my_parcel/backend/: address_resolver.py  address_resolver_answer.py  example.py  exposed_shipment_object.py  http_connector.py  keymanager.py  shipment.py  shipment_tracker.py  shipment_tracker_answer.py
where_is_my_parcel/frontend/: example.html  index.html  serve.js
where_is_my_parcel/frontend/assets/styles/: style.css
