[tool.poetry]
name = "where_is_my_parcel"
version = "0.1.0"
description = ""
authors = ["Thomas Camminady <0milieux_member@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
ipykernel = "^6.16.1"
rich = "^13.0.1"
pandas = "^1.5.2"
folium = "^0.14.0"
fastapi = "^0.89.0"
uvicorn = "^0.20.0"


[tool.poetry.dev-dependencies]
pytest = ">=5.2"



[tool.poetry.group.dev.dependencies]
pyclean = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
